[gd_scene load_steps=11 format=3 uid="uid://dtelmk3ogytmn"]

[ext_resource type="Texture2D" uid="uid://dmram6s0sd7ns" path="res://assets/main menu.png" id="1_img1p"]
[ext_resource type="Script" path="res://menu.gd" id="1_utobr"]
[ext_resource type="Texture2D" uid="uid://brpq5l6l52pt6" path="res://assets/btn/btn_play.png" id="2_d43t8"]
[ext_resource type="Texture2D" uid="uid://c48usqnyx4ss3" path="res://assets/btn/btn_play_pressed.png" id="3_3cuxx"]
[ext_resource type="Texture2D" uid="uid://c1f1mo76ywo2h" path="res://assets/btn/btn_play_hover.png" id="4_hklm3"]
[ext_resource type="Texture2D" uid="uid://hbs58iykgb6t" path="res://assets/btn/btn_credits.png" id="5_5uu10"]
[ext_resource type="Texture2D" uid="uid://lj75nvfjfl6t" path="res://assets/btn/btn_sound_off.png" id="6_ibekb"]
[ext_resource type="Texture2D" uid="uid://cas5g2qekarli" path="res://assets/btn/btn_sound_on.png" id="7_umtex"]
[ext_resource type="Texture2D" uid="uid://cugf8qj2dgkpy" path="res://assets/credits.png" id="9_qsdd2"]
[ext_resource type="Texture2D" uid="uid://cyofl2r0s5aa0" path="res://assets/btn/btn_back.png" id="10_dnj2o"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_utobr")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
ignore_rotation = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="bg" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_img1p")

[node name="play" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = 188.0
offset_right = 321.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("2_d43t8")
texture_pressed = ExtResource("3_3cuxx")
texture_hover = ExtResource("4_hklm3")
texture_disabled = ExtResource("3_3cuxx")

[node name="credits" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 720.0
offset_top = -483.0
offset_right = 807.0
offset_bottom = -396.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_5uu10")
texture_pressed = ExtResource("5_5uu10")
texture_hover = ExtResource("5_5uu10")
texture_disabled = ExtResource("5_5uu10")

[node name="sound" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 815.0
offset_top = -487.0
offset_right = 910.0
offset_bottom = -392.0
focus_mode = 0
theme_override_icons/checked = ExtResource("6_ibekb")
theme_override_icons/unchecked = ExtResource("7_umtex")

[node name="credits_screen" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_qsdd2")

[node name="back" type="TextureButton" parent="Control/credits_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -928.0
offset_top = -482.0
offset_right = -841.0
offset_bottom = -395.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_dnj2o")
texture_pressed = ExtResource("10_dnj2o")
texture_hover = ExtResource("10_dnj2o")
texture_disabled = ExtResource("10_dnj2o")

[connection signal="pressed" from="Control/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/credits" to="." method="_on_credits_pressed"]
[connection signal="toggled" from="Control/sound" to="." method="_on_sound_toggled"]
[connection signal="pressed" from="Control/credits_screen/back" to="." method="_on_back_pressed"]
